force-app/zurich-base/main/default/objects/Lead_Offers__c/Lead_Offers__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Ofertas de Lead</label>
</CustomObject>