force-app/zurich-base/main/default/objects/Lead_Offers__c/fields/BusinessCode__c.field-meta.xml
<CustomField>
    <fullName>BusinessCode__c</fullName>
    <description>Código de Negocio para las Ofertas del Contact Center.</description>
    <label>Código de Negocio</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>