force-app/zurich-base/main/default/objects/Lead_Offers__c/fields/BusinessHour__c.field-meta.xml
<CustomField>
    <fullName>BusinessHour__c</fullName>
    <description>Nombre del registro de Business Hour al que asociar un registro de ContactRequest para el Contact Center.</description>
    <label>Horario de Oficina</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>