force-app/zurich-base/main/default/objects/Lead_Offers__c/fields/ContactCenterUser__c.field-meta.xml
<CustomField>
    <fullName>ContactCenterUser__c</fullName>
    <description>Alias del usuario genérico de Contact Center al que asignar Ofertas de Lead.</description>
    <label>Usuario CC</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>