force-app/zurich-base/main/default/objects/Lead_Offers__c/fields/DaysToReassignOffer__c.field-meta.xml
<CustomField>
    <fullName>DaysToReassignOffer__c</fullName>
    <description>Número de días transcurridos los cuales se debe reasignar al Contact Center una Oferta de Lead no gestionada por un Mediador. Valor 0 si se desea desactivar la notificación.</description>
    <label>Días Reasignación a CC</label>
    <precision>10</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>