force-app/zurich-base/main/default/objects/Lead_Offers__c/fields/NotificationDaysBeforeDue__c.field-meta.xml
<CustomField>
    <fullName>NotificationDaysBeforeDue__c</fullName>
    <description>Número de días antes del vencimiento de la Oferta de Lead para lanzar la notificación de vencimiento al Mediador. Valor 0 si se desea desactivar la notificación.</description>
    <label>Días Notificación Vencimiento</label>
    <precision>10</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>