force-app/zurich-base/main/default/objects/Lead_Offers__c/fields/VoiceQueue__c.field-meta.xml
<CustomField>
    <fullName>VoiceQueue__c</fullName>
    <description>Nombre de la cola de CTI a la que asociar un registro de ContactRequest para el Contact Center.</description>
    <label>Cola CTI</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>